try to fix transparent input text only on safari ios mobile

--- a/css/widget.css
+++ b/css/widget.css
@@ -2675,6 +2675,7 @@ html {
 }
 .w-full {
   width: 100%;
+  --webkit-user-select: text;
 }
 .w-px {
   width: 1px;
